# payy

./: Cargo.toml
eth/: README.md  hardhat.config.ts  package.json
eth/contracts/rollup2/: RollupV1.sol
eth/noir/: agg_agg.sol  agg_utxo.sol  mint.sol  points.sol  signature.sol  utxo.sol
eth/scripts/: deploy.ts  upgrade.ts
fixtures/keys/: agg_agg_key  agg_agg_key_fields.json  agg_utxo_key  agg_utxo_key_fields.json  mint_key  mint_key_fields.json  points_key  points_key_fields.json  utxo_key  utxo_key_fields.json
fixtures/programs/: agg_agg.json  agg_utxo.json  mint.json  points.json  signature.json  utxo.json
noir/: Nargo.toml  README.md  generate_fixtures.sh
noir/agg_agg/: Nargo.toml  Prover.toml
noir/agg_agg/src/: main.nr
noir/agg_utxo/: Nargo.toml  Prover.toml
noir/agg_utxo/src/: main.nr
noir/common/: Nargo.toml
noir/points/: Nargo.toml  Prover.toml
noir/signature/: Nargo.toml
noir/utxo/: Nargo.toml  Prover.toml  Verifier.toml
pkg/barretenberg/: Cargo.toml
pkg/block-store/: Cargo.toml
pkg/burn-substitutor/: Cargo.toml
pkg/burn-substitutor/src/: lib.rs
pkg/contracts/: Cargo.toml
pkg/element/: Cargo.toml
pkg/eth-util/: Cargo.toml
pkg/hash/: Cargo.toml
pkg/node/: Cargo.toml
pkg/node-interface/: Cargo.toml
pkg/node-interface/src/: elements.rs  error.rs  transaction.rs
pkg/p2p2/: Cargo.toml
pkg/primitives/: Cargo.toml
pkg/prover/: Cargo.toml  README.md
pkg/rpc/: Cargo.toml
pkg/rpc-error-convert/: Cargo.toml
pkg/smirk/: Cargo.toml
pkg/solid/: Cargo.toml
pkg/testutil/: Cargo.toml
pkg/zk-primitives/: Cargo.toml
(+150 files in other folders)
