[package]
name = "node-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
element = { workspace = true }
rpc = { workspace = true }
rpc-error-convert = { workspace = true }
primitives = { workspace = true }
zk-primitives = { workspace = true }

serde_json = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
